<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/topnav"
        layout="@layout/inc_topnav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <ScrollView
        android:id="@+id/SVBody"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bottombar"
        android:layout_below="@id/topnav"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/homeScreenDeliverVerifyContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_blue_four_corners"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/row1TV"
                        style="@style/LargeBoldWhiteText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/changeSettingsLanguage" />

                    <RadioGroup
                        android:id="@+id/changeSettingsLanguageRG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/row1TV"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/changeSettingsOptionEnglish"
                            style="@style/LargeWhiteText"
                            android:layout_marginRight="10dp"
                            android:checked="false"
                            android:text="@string/changeSettingsEnglish" />

                        <RadioButton
                            android:id="@+id/changeSettingsOptionSpanish"
                            style="@style/LargeWhiteText"
                            android:checked="false"
                            android:text="@string/changeSettingsSpanish"
                            android:visible="true" />
                    </RadioGroup>
                </LinearLayout>

                <Button
                    android:id="@+id/btnSave"
                    style="@style/MediumWhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/blue_button_pressed"
                    android:text="@string/save" />
            </LinearLayout>
            <!-- -->

            <LinearLayout
                android:id="@+id/useMapsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_blue_four_corners"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/useMapsLabel"
                        style="@style/LargeBoldWhiteText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/useMapsLabel" />

                    <RadioGroup
                        android:id="@+id/useMapsRadioGroup"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/useMapsTrueRadiobutton"
                            style="@style/LargeWhiteText"
                            android:layout_marginRight="10dp"
                            android:checked="false"
                            android:text="@string/useMapsYesLabel" />

                        <RadioButton
                            android:id="@+id/useMapsFalseRadiobutton"
                            style="@style/LargeWhiteText"
                            android:checked="false"
                            android:text="@string/useMapsNoLabel"
                            android:visible="true" />
                    </RadioGroup>
                </LinearLayout>

                <Button
                    android:id="@+id/btnSaveUseMaps"
                    style="@style/MediumWhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/blue_button_pressed"
                    android:text="@string/save" />
            </LinearLayout>
            <!-- -->

            <LinearLayout
                android:id="@+id/useSpeechContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_blue_four_corners"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/useSpeechLabel"
                        style="@style/LargeBoldWhiteText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/useSpeechLabel" />

                    <RadioGroup
                        android:id="@+id/useSpeechRadioGroup"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/useSpeechTrueRadiobutton"
                            style="@style/LargeWhiteText"
                            android:layout_marginRight="10dp"
                            android:checked="false"
                            android:text="@string/useSpeechYesLabel" />

                        <RadioButton
                            android:id="@+id/useSpeechFalseRadiobutton"
                            style="@style/LargeWhiteText"
                            android:checked="false"
                            android:text="@string/useSpeechNoLabel"
                            android:visible="true" />
                    </RadioGroup>
                </LinearLayout>

                <Button
                    android:id="@+id/btnSaveUseSpeech"
                    style="@style/MediumWhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/blue_button_pressed"
                    android:text="@string/save" />
            </LinearLayout>
            <!-- -->
            <LinearLayout
                android:id="@+id/row2RL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_blue_four_corners"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/row2TV"
                        style="@style/LargeBoldWhiteText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/provisionDeviceText" />

                    <TextView
                        android:id="@+id/tabletIdentifier"
                        style="@style/MediumBoldWhiteText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <TextView
                        android:id="@+id/deviceDescField"
                        style="@style/MediumBoldWhiteText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/deviceDescET"
                        style="@style/red_edit_text"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnRegisterTablet"
                    style="@style/MediumWhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/blue_button_pressed"
                    android:text="@string/registerTablet" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row3RL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_blue_four_corners"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rowAdminTV"
                        style="@style/LargeBoldWhiteText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enterAdminPassword" />

                    <EditText
                        android:id="@+id/loginPasswordET"
                        style="@style/red_edit_text"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:singleLine="true" />

                    <LinearLayout
                        android:id="@+id/row4B"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp">

                        <Button
                            android:id="@+id/btnLogin"
                            style="@style/MediumWhiteText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:background="@drawable/blue_button_pressed"
                            android:text="@string/submit" />

                        <Button
                            android:id="@+id/btnLogout"
                            style="@style/MediumWhiteText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:background="@drawable/blue_button_pressed"
                            android:text="@string/logout" />

                        <Button
                            android:id="@+id/btnLogoutUser"
                            style="@style/MediumWhiteText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:background="@drawable/blue_button_pressed"
                            android:text="Close CarrierTrack"
                            android:visibility="gone" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/bottombar"
        layout="@layout/bottom_cts_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>